--- a/src/app/dashboard/tutor/tutor.component.scss
+++ b/src/app/dashboard/tutor/tutor.component.scss
@@ -15,6 +15,13 @@
   position: relative;
   display: inline-block;
 
+  mat-icon {
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    cursor: help;
+  }
+
   .balao {
     display: none;
     position: absolute;
